namespace Ludo.interfaceX;

public interface IBoard
{

}